--- a/final_pjt_back/requirements.txt
+++ b/final_pjt_back/requirements.txt
@@ -1,8 +1,97 @@
+appnope==0.1.3
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
 asgiref==3.4.1
+asttokens==2.0.8
+attrs==21.4.0
+backcall==0.2.0
 beautifulsoup4==4.11.1
+bleach==5.0.1
+certifi==2022.6.15
+cffi==1.15.1
+charset-normalizer==2.1.0
+colorama==0.4.4
+coreapi==2.3.3
+coreschema==0.0.4
+debugpy==1.6.2
+decorator==5.1.0
+defusedxml==0.7.1
 Django==3.2.9
 django-bootstrap-v5==1.0.11
+django-bootstrap5==22.1
+django-classy-tags==3.0.1
+django-cors-headers==3.13.0
+django-extensions==3.1.3
+django-filter==22.1
+django-taggit==3.0.0
+django-taggit-templatetags==0.2.5
+django-taggit-templatetags2==1.6.1
+django-templatetag-sugar==1.0
+djangorestframework==3.14.0
+drf-spectacular==0.24.2
+drf-yasg==1.21.4
+entrypoints==0.4
+executing==1.1.0
+fastjsonschema==2.16.1
+idna==3.3
+inflection==0.5.1
+ipykernel==6.15.1
+ipython==7.27.0
+ipython-genutils==0.2.0
+ipywidgets==7.7.1
+itypes==1.2.0
+jedi==0.18.0
+Jinja2==3.1.2
+jsonschema==4.7.2
+jupyter-contrib-core==0.4.0
+jupyter-contrib-nbextensions==0.5.1
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.6
+jupyter-nbextensions-configurator==0.5.0
+jupyterlab-widgets==1.1.1
+Library==0.0.0
+lxml==4.9.1
+MarkupSafe==2.1.1
+matplotlib-inline==0.1.3
+mistune==0.8.4
+nbclient==0.6.6
+nest-asyncio==1.5.5
+numpy==1.23.2
+packaging==21.3
+pandas==1.5.1
+pandocfilters==1.5.0
+parso==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
+prometheus-client==0.14.1
+prompt-toolkit==3.0.20
+psutil==5.9.1
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycparser==2.21
+Pygments==2.10.0
+pyparsing==3.0.9
+pyrsistent==0.18.1
+python-dateutil==2.8.2
 pytz==2021.3
+PyYAML==6.0
+pyzmq==23.2.0
+QtPy==2.1.0
+requests==2.28.1
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.7
+Send2Trash==1.8.0
+six==1.16.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.2
-djangorestframework==3.14.0
+stack-data==0.5.1
+terminado==0.15.0
+tinycss2==1.1.1
+tornado==6.2
+traitlets==5.1.0
+uplink==0.9.7
+uritemplate==4.1.1
+urllib3==1.26.10
+wcwidth==0.2.5
+webencodings==0.5.1
+widgetsnbextension==3.6.1
