--- a/final_pjt_back/requirements.txt
+++ b/final_pjt_back/requirements.txt
@@ -1,11 +1,27 @@
 asgiref==3.4.1
+attrs==22.1.0
 beautifulsoup4==4.11.1
+certifi==2022.9.24
+charset-normalizer==2.1.1
 Django==3.2.9
 django-bootstrap-v5==1.0.11
 django-cors-headers==3.13.0
 django-extensions==3.1.3
+django-rest-auth==0.9.5
 djangorestframework==3.14.0
 drf-spectacular==0.24.2
+idna==3.4
+inflection==0.5.1
+jsonschema==4.17.0
+numpy==1.23.4
 pandas==1.5.1
+pyrsistent==0.19.2
+python-dateutil==2.8.2
+pytz==2022.6
+PyYAML==6.0
 requests==2.28.1
+six==1.16.0
 soupsieve==2.3.2.post1
+sqlparse==0.4.3
+uritemplate==4.1.1
+urllib3==1.26.12
