--- a/final_pjt_back/requirements.txt
+++ b/final_pjt_back/requirements.txt
@@ -2,8 +2,13 @@ asgiref==3.4.1
 attrs==22.1.0
 beautifulsoup4==4.11.1
 certifi==2022.9.24
+cffi==1.15.1
 charset-normalizer==2.1.1
+cryptography==38.0.3
+defusedxml==0.7.1
+dj-rest-auth==2.2.5
 Django==3.2.9
+django-allauth==0.50.0
 django-bootstrap-v5==1.0.11
 django-cors-headers==3.13.0
 django-extensions==3.1.3
@@ -14,12 +19,17 @@ idna==3.4
 inflection==0.5.1
 jsonschema==4.17.0
 numpy==1.23.4
+oauthlib==3.2.2
 pandas==1.5.1
+pycparser==2.21
+PyJWT==2.6.0
 pyrsistent==0.19.2
 python-dateutil==2.8.2
+python3-openid==3.2.0
 pytz==2022.6
 PyYAML==6.0
 requests==2.28.1
+requests-oauthlib==1.3.1
 six==1.16.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.3
