--- a/final_pjt_back/requirements.txt
+++ b/final_pjt_back/requirements.txt
@@ -21,6 +21,7 @@ jsonschema==4.17.0
 numpy==1.23.4
 oauthlib==3.2.2
 pandas==1.5.1
+Pillow==9.3.0
 pycparser==2.21
 PyJWT==2.6.0
 pyrsistent==0.19.2
