--- a/final_pjt_front/package.json
+++ b/final_pjt_front/package.json
@@ -13,7 +13,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "axios": "^1.1.3",
+    "cookie": "^0.5.0",
     "core-js": "^3.8.3",
+    "fast-levenshtein": "^3.0.0",
+    "js-cookie": "^3.0.1",
+    "secure-ls": "^1.2.6",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
