--- a/final_pjt_front/package.json
+++ b/final_pjt_front/package.json
@@ -13,15 +13,17 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
+    "bootstrap-vue": "^2.23.1",
     "cookie": "^0.5.0",
     "core-js": "^3.8.3",
-    "lodash": "^4.17.21",
-    "run": "^1.4.0",
-    "serve": "^14.1.2",
     "fast-levenshtein": "^3.0.0",
     "js-cookie": "^3.0.1",
+    "lodash": "^4.17.21",
+    "run": "^1.4.0",
     "secure-ls": "^1.2.6",
-    "vue": "^2.6.14",
+    "serve": "^14.1.2",
+    "vue": "^2.7.14",
     "vue-router": "^3.5.1",
     "vue-tinder": "^2.0.3",
     "vuex": "^3.6.2",
