--- a/final_pjt_front/package.json
+++ b/final_pjt_front/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.3",
     "cookie": "^0.5.0",
     "core-js": "^3.8.3",
     "fast-levenshtein": "^3.0.0",
