--- a/final_pjt_front/package.json
+++ b/final_pjt_front/package.json
@@ -23,6 +23,7 @@
     "secure-ls": "^1.2.6",
     "serve": "^14.1.2",
     "vue": "^2.6.14",
+    "vue-infinite-loading": "^2.4.5",
     "vue-router": "^3.5.1",
     "vue-tinder": "^2.0.3",
     "vuex": "^3.6.2",
